setup functions and libs